<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>4.0.2</version>
		<relativePath/>
		<!-- lookup parent from repository -->
	</parent>
	<groupId>com.positivity</groupId>
	<artifactId>positivity</artifactId>
	<version>0.1.0-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>positivity</name>
	<description>Demo POS</description>

	<dependencyManagement>
		<dependencies>
			<!-- Spring Cloud BOM -->
			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-dependencies</artifactId>
				<version>${spring-cloud.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<!-- Internal Positivity BOM (for internal com.positivity:* artifacts) -->
			<dependency>
				<groupId>com.positivity</groupId>
				<artifactId>pos-dependencies</artifactId>
				<version>${project.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<!-- Shared DTOs -->
			<dependency>
				<groupId>com.positivity</groupId>
				<artifactId>pos-shared-dtos</artifactId>
				<version>${project.version}</version>
			</dependency>

			<!-- TEST DEPENDENCIES - JUnit managed by Spring Boot 4.0.2 (6.0.2) -->
			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-core</artifactId>
				<version>${mockito.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-junit-jupiter</artifactId>
				<version>${mockito.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.assertj</groupId>
				<artifactId>assertj-core</artifactId>
				<version>${assertj.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>com.tngtech.archunit</groupId>
				<artifactId>archunit-junit5</artifactId>
				<version>${archunit.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>io.rest-assured</groupId>
				<artifactId>rest-assured</artifactId>
				<version>${rest-assured.version}</version>
				<scope>test</scope>
			</dependency>

			<!-- UTILITY LIBRARIES -->
			<dependency>
				<groupId>org.projectlombok</groupId>
				<artifactId>lombok</artifactId>
				<version>${lombok.version}</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>${slf4j.version}</version>
			</dependency>

			<!-- OPENAPI / SWAGGER -->
			<dependency>
				<groupId>org.springdoc</groupId>
				<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
				<version>${springdoc-openapi.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springdoc</groupId>
				<artifactId>springdoc-openapi-starter-common</artifactId>
				<version>${springdoc-openapi.version}</version>
			</dependency>
			<dependency>
				<groupId>io.swagger.core.v3</groupId>
				<artifactId>swagger-annotations</artifactId>
				<version>${swagger-annotations.version}</version>
			</dependency>
			<!-- Kotlin Reflect - required by springdoc-openapi 2.8+ -->
			<dependency>
				<groupId>org.jetbrains.kotlin</groupId>
				<artifactId>kotlin-reflect</artifactId>
				<version>2.1.10</version>
			</dependency>

			<!-- OPENTELEMETRY (Optional - for gradual observability adoption) -->
			<dependency>
				<groupId>io.opentelemetry</groupId>
				<artifactId>opentelemetry-api</artifactId>
				<version>${opentelemetry.version}</version>
				<optional>true</optional>
			</dependency>
			<dependency>
				<groupId>io.opentelemetry</groupId>
				<artifactId>opentelemetry-sdk</artifactId>
				<version>${opentelemetry.version}</version>
				<optional>true</optional>
			</dependency>
			<dependency>
				<groupId>io.opentelemetry</groupId>
				<artifactId>opentelemetry-exporter-otlp</artifactId>
				<version>${opentelemetry.version}</version>
				<optional>true</optional>
			</dependency>
			<dependency>
				<groupId>io.opentelemetry</groupId>
				<artifactId>opentelemetry-sdk-extension-autoconfigure</artifactId>
				<version>${opentelemetry.version}</version>
				<optional>true</optional>
			</dependency>
			<dependency>
				<groupId>io.micrometer</groupId>
				<artifactId>micrometer-tracing-bridge-otel</artifactId>
				<version>1.6.2</version>
				<optional>true</optional>
			</dependency>

			<!-- UUID v7 Generator Library (ADR-0013) -->
			<dependency>
				<groupId>com.github.f4b6a3</groupId>
				<artifactId>uuid-creator</artifactId>
				<version>${uuid-creator.version}</version>
			</dependency>

			<!-- JACKSON 3.0 (for JSON serialization/deserialization) -->
			<dependency>
				<groupId>tools.jackson.core</groupId>
				<artifactId>jackson-databind</artifactId>
				<version>3.0.4</version>
			</dependency>
			<dependency>
				<groupId>tools.jackson.core</groupId>
				<artifactId>jackson-annotations</artifactId>
				<version>3.0.4</version>
			</dependency>
			<dependency>
				<groupId>tools.jackson.datatype</groupId>
				<artifactId>jackson-datatype-jdk8</artifactId>
				<version>3.0.4</version>
			</dependency>
			<dependency>
				<groupId>tools.jackson.datatype</groupId>
				<artifactId>jackson-datatype-jsr310</artifactId>
				<version>3.0.4</version>
			</dependency>

			<!-- RESILIENCE4J (for Retry Patterns) -->
			<dependency>
				<groupId>io.github.resilience4j</groupId>
				<artifactId>resilience4j-retry</artifactId>
				<version>${resilience4j.version}</version>
			</dependency>
			<dependency>
				<groupId>io.github.resilience4j</groupId>
				<artifactId>resilience4j-spring-boot3</artifactId>
				<version>${resilience4j.version}</version>
			</dependency>

			<!-- VAVR (for Functional Programming - Try/Either) -->
			<dependency>
				<groupId>io.vavr</groupId>
				<artifactId>vavr</artifactId>
				<version>${vavr.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<modules>
		<module>pos-dependencies</module>
		<module>pos-shared-dtos</module>
		<module>pos-security-common</module>
		<module>pos-archunit</module>
		<module>pos-agent-framework</module>
		<module>pos-catalog</module>
		<module>pos-customer</module>
		<module>pos-invoice</module>
		<module>pos-workorder</module>
		<module>pos-price</module>
		<module>pos-shop-manager</module>
		<module>pos-inquiry</module>
		<module>pos-order</module>
		<module>pos-accounting</module>
		<module>pos-events</module>
		<module>pos-event-receiver</module>
		<module>pos-image</module>
		<module>pos-vehicle-inventory</module>
		<module>pos-inventory</module>
		<module>pos-vehicle-fitment</module>
		<module>pos-vehicle-reference-nhtsa</module>
		<module>pos-vehicle-reference-carapi</module>
		<module>pos-security-service</module>
		<module>pos-people</module>
		<module>pos-location</module>
		<module>pos-tax</module>
		<module>pos-documents</module>
		<module>pos-api-gateway</module>
		<module>pos-service-discovery</module>
		<module>pos-mcp-server</module>
	</modules>
	<url>https://your.project.url/</url>
	<licenses>
		<license>
			<name>The Apache License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	<developers>
		<developer>
			<id>louisburroughs</id>
			<name>Louis Burroughs</name>
			<email>louis.burroughs@gmail.com</email>
		</developer>
	</developers>
	<scm>
		<connection>scm:git:git://github.com/louisburroughs/positivity.git</connection>
		<developerConnection>scm:git:ssh://github.com:louisburroughs/positivity.git</developerConnection>
		<tag>HEAD</tag>
		<url>https://github.com/louisburroughs/positivity</url>
	</scm>
	<properties>
		<java.version>21</java.version>
		<maven.compiler.source>21</maven.compiler.source>
		<maven.compiler.target>21</maven.compiler.target>
		<spring-cloud.version>2025.1.1</spring-cloud.version>
		<archunit.version>1.3.0</archunit.version>
		<postgresql.version>42.7.9</postgresql.version>
		<tomcat.version>10.1.28</tomcat.version>
		<!-- Test Dependencies - JUnit managed by Spring Boot 4.0.2 (6.0.2) -->
		<mockito.version>5.9.0</mockito.version>
		<assertj.version>3.25.1</assertj.version>
		<rest-assured.version>5.5.0</rest-assured.version>
		<!-- Utility Libraries -->
		<lombok.version>1.18.32</lombok.version>
		<slf4j.version>2.0.13</slf4j.version>
		<springdoc-openapi.version>2.8.0</springdoc-openapi.version>
		<swagger-annotations.version>2.2.22</swagger-annotations.version>
		<!-- OpenTelemetry -->
		<opentelemetry.version>1.44.1</opentelemetry.version>
		<!-- UUID v7 Generator -->
		<uuid-creator.version>5.3.7</uuid-creator.version>
		<!-- Resilience4j for Retry Patterns and Vavr for Functional Programming -->
		<resilience4j.version>2.2.0</resilience4j.version>
		<vavr.version>0.10.4</vavr.version>
		<!-- Build Plugins -->
		<maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
		<springdoc-openapi-maven-plugin.version>1.5</springdoc-openapi-maven-plugin.version>
	</properties>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>${maven-compiler-plugin.version}</version>
					<configuration>
						<source>21</source>
						<target>21</target>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.springdoc</groupId>
					<artifactId>springdoc-openapi-maven-plugin</artifactId>
					<version>${springdoc-openapi-maven-plugin.version}</version>
				</plugin>
			</plugins>
		</pluginManagement>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>3.4.1</version>
				<executions>
					<execution>
						<id>enforce-java</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<requireJavaVersion>
									<version>21</version>
									<message>Java 21 or later is required to build this project</message>
								</requireJavaVersion>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compiler-plugin.version}</version>
				<configuration>
					<source>21</source>
					<target>21</target>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
